--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="destructuringAssignment.js"></script>
+    <script src="Regular Expressions/multiplePossibilities.js"></script>
+
 </head>
 
 <body>
