Certification & Drive Exercises

--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="JavaScript Algorithms and Data Structures Projects/palindromeChecker.js"></script>
+    <script src="EjerciciosDrive/ejercicio7.js"></script>
 
 </head>
 
